tooling/nargo_cli/tests/snapshots/execution_success/bit_and/execute__tests__force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "a",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "b",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _29",
    "private parameters indices : [_0, _1, _2, _3]",
    "public parameters indices : []",
    "return value indices : []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) 0 ], EXPR [ 256 ]], outputs: [_4, _5]",
    "BLACKBOX::RANGE [_4]:246 bits []",
    "BLACKBOX::RANGE [_5]:8 bits []",
    "EXPR [ (1, _0) (-256, _4) (-1, _5) 0 ]",
    "EXPR [ (-1, _4) (-1, _6) 85500948718122168836900022442411230814642048439125134155071110103811751936 ]",
    "BLACKBOX::RANGE [_6]:246 bits []",
    "BRILLIG CALL func 1: inputs: [EXPR [ (-1, _4) 85500948718122168836900022442411230814642048439125134155071110103811751936 ]], outputs: [_7]",
    "EXPR [ (-1, _4, _7) (85500948718122168836900022442411230814642048439125134155071110103811751936, _7) (1, _8) -1 ]",
    "EXPR [ (-1, _4, _8) (85500948718122168836900022442411230814642048439125134155071110103811751936, _8) 0 ]",
    "EXPR [ (1, _5, _8) (-1, _9) 0 ]",
    "BLACKBOX::RANGE [_9]:0 bits []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _1) 0 ], EXPR [ 256 ]], outputs: [_10, _11]",
    "BLACKBOX::RANGE [_10]:246 bits []",
    "BLACKBOX::RANGE [_11]:8 bits []",
    "EXPR [ (1, _1) (-256, _10) (-1, _11) 0 ]",
    "EXPR [ (-1, _10) (-1, _12) 85500948718122168836900022442411230814642048439125134155071110103811751936 ]",
    "BLACKBOX::RANGE [_12]:246 bits []",
    "BRILLIG CALL func 1: inputs: [EXPR [ (-1, _10) 85500948718122168836900022442411230814642048439125134155071110103811751936 ]], outputs: [_13]",
    "EXPR [ (-1, _10, _13) (85500948718122168836900022442411230814642048439125134155071110103811751936, _13) (1, _14) -1 ]",
    "EXPR [ (-1, _10, _14) (85500948718122168836900022442411230814642048439125134155071110103811751936, _14) 0 ]",
    "EXPR [ (1, _11, _14) (-1, _15) 0 ]",
    "BLACKBOX::RANGE [_15]:0 bits []",
    "BLACKBOX::AND [_5, _11]:8 bits [_16]",
    "EXPR [ (-1, _5) (1, _16) 0 ]",
    "EXPR [ (1, _0) 0 ]",
    "EXPR [ (1, _1) -16 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _2) 0 ], EXPR [ 256 ]], outputs: [_17, _18]",
    "BLACKBOX::RANGE [_17]:246 bits []",
    "BLACKBOX::RANGE [_18]:8 bits []",
    "EXPR [ (1, _2) (-256, _17) (-1, _18) 0 ]",
    "EXPR [ (-1, _17) (-1, _19) 85500948718122168836900022442411230814642048439125134155071110103811751936 ]",
    "BLACKBOX::RANGE [_19]:246 bits []",
    "BRILLIG CALL func 1: inputs: [EXPR [ (-1, _17) 85500948718122168836900022442411230814642048439125134155071110103811751936 ]], outputs: [_20]",
    "EXPR [ (-1, _17, _20) (85500948718122168836900022442411230814642048439125134155071110103811751936, _20) (1, _21) -1 ]",
    "EXPR [ (-1, _17, _21) (85500948718122168836900022442411230814642048439125134155071110103811751936, _21) 0 ]",
    "EXPR [ (1, _18, _21) (-1, _22) 0 ]",
    "BLACKBOX::RANGE [_22]:0 bits []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _3) 0 ], EXPR [ 256 ]], outputs: [_23, _24]",
    "BLACKBOX::RANGE [_23]:246 bits []",
    "BLACKBOX::RANGE [_24]:8 bits []",
    "EXPR [ (1, _3) (-256, _23) (-1, _24) 0 ]",
    "EXPR [ (-1, _23) (-1, _25) 85500948718122168836900022442411230814642048439125134155071110103811751936 ]",
    "BLACKBOX::RANGE [_25]:246 bits []",
    "BRILLIG CALL func 1: inputs: [EXPR [ (-1, _23) 85500948718122168836900022442411230814642048439125134155071110103811751936 ]], outputs: [_26]",
    "EXPR [ (-1, _23, _26) (85500948718122168836900022442411230814642048439125134155071110103811751936, _26) (1, _27) -1 ]",
    "EXPR [ (-1, _23, _27) (85500948718122168836900022442411230814642048439125134155071110103811751936, _27) 0 ]",
    "EXPR [ (1, _24, _27) (-1, _28) 0 ]",
    "BLACKBOX::RANGE [_28]:0 bits []",
    "BLACKBOX::AND [_18, _24]:8 bits [_29]",
    "EXPR [ (-1, _18) (1, _29) 0 ]",
    "unconstrained func 0",
    "[Const { destination: Direct(10), bit_size: Integer(U32), value: 2 }, Const { destination: Direct(11), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(10), offset_address: Direct(11) }, BinaryFieldOp { destination: Direct(2), op: IntegerDiv, lhs: Direct(0), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Mul, lhs: Direct(2), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Sub, lhs: Direct(0), rhs: Direct(1) }, Mov { destination: Direct(0), source: Direct(2) }, Stop { return_data: HeapVector { pointer: Direct(11), size: Direct(10) } }]",
    "unconstrained func 1",
    "[Const { destination: Direct(21), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(20), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(21), offset_address: Direct(20) }, Const { destination: Direct(2), bit_size: Field, value: 0 }, BinaryFieldOp { destination: Direct(3), op: Equals, lhs: Direct(0), rhs: Direct(2) }, JumpIf { condition: Direct(3), location: 8 }, Const { destination: Direct(1), bit_size: Field, value: 1 }, BinaryFieldOp { destination: Direct(0), op: Div, lhs: Direct(1), rhs: Direct(0) }, Stop { return_data: HeapVector { pointer: Direct(20), size: Direct(21) } }]"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": "[file_map]",
  "expression_width": {
    "Bounded": {
      "width": 4
    }
  }
}
